[package]
name = "test-async-graphql-deterministic-introspection"
version = "0.1.0"
authors = ["Jan Kuehle <jan.kuehle@red-badger.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "2.0.5"
async-std = { version = "1.6.5", features = ["attributes"] }
serde_json = "1.0.59"
